--- a/projet/src/components/style.css
+++ b/projet/src/components/style.css
@@ -4,8 +4,9 @@
 img {
   height: 20%;
   width: 20%;
-  align-items: center;
-  align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 h1,
 h2 {
